# WMA-Tapis-Templates

./: .gitignore  README.md  client_credentials.py  client_secrets.example.py  initialize_tenant.py  pyproject.toml  secrets.example.env
applications/FigureGen-Parallel-Stampede3/: README.md  app.json  profile.json  tapisjob_app.sh
applications/FigureGen-Serial-Stampede3/: README.md  app.json  profile.json  tapisjob_app.sh
applications/GiD/: app.json  tapisjob_app.sh
applications/GiD-stampede3/: Readme.md  app.json
applications/LS-Dyna/: app.json  profile.json  tapisjob_app.sh
applications/LS-Dyna-stampede3/: Readme.md  app.json  profile.json  tapisjob_app.sh
credentials/: credential.json
profiles/: no-profile-override.json  sdsc-singularity.json  tacc-apptainer.json  tacc-no-modules.json
systems/: 3dem.storage.public.json  a2cps.cloud.corral.dev.json  apcd.submissions.json  c4-cloud.json  cep.project.root.json  cloud.corral.community.json  cloud.data.community.json  cloud.data.exec.json  cloud.data.exec.pki.json  cloud.data.exec.tg458981.json  cloud.data.exec.wma_prtl.json  cloud.data.json  designsafe.storage.default.json  designsafe.storage.frontera.work.json  ds-stko-dev.json  frontera.json  ls6.json  maverick2.json  project.root.example.json  project.root.json  secure.cloud.corral.json  secure.corral.json  secure.frontera.json  stampede2.community.json  stampede3.json  tacc-singularity.json  tacc_singularity.json  vista.json  wma-dcv-01.json  wma-exec-01.json
utils/: client.py  create_client_credential.py  load_file_to_json.py
(+827 files in other folders)
